Try more features with bar chart
- make chart data an atom
- buttons to mutate the data:
 - randomise values
 - cycle data
- css transitions and hover effects

--- a/hello-bars/public/index.html
+++ b/hello-bars/public/index.html
@@ -1,8 +1,14 @@
 <html>
-<head><title>Dixon</title></head>
-<body>
-<div id="bars">
-<!-- this is where the magic happens -->
-</div>
-<script type="text/javascript" src="out/hello-bars.js"></script>
+  <head><title>Bars</title>
+    <link rel="stylesheet" href="bars.css" type="text/css" media="screen" />
+  </head>
+  <body>
+    <button id="button"> </button>
+    <button id="shift">
+      Shift
+    </button>
+    <div id="bars">
+      <!-- this is where the magic happens -->
+    </div>
+    <script type="text/javascript" src="out/hello-bars.js"></script>
 </body> </html>
