Add vertical svg chart with cos wave data
* Button to cycle the vchart data to the left
* do-cycle renamed to rotate and takes optional n steps

--- a/hello-bars/public/index.html
+++ b/hello-bars/public/index.html
@@ -7,8 +7,15 @@
     <button id="shift">
       Shift
     </button>
+    <button id="shiftv">
+      Shift vertical chart
+    </button>
     <div id="bars">
       <!-- this is where the magic happens -->
     </div>
+    <br />
+    <svg id="vbars">
+
+    </svg>
     <script type="text/javascript" src="out/hello-bars.js"></script>
 </body> </html>
